ForgeWorkspace/.gradle/gradle.log
This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.This mapping 'snapshot_20171003' was designed for MC 1.12! Use at your own peril.

#################################################
         ForgeGradle 2.3-SNAPSHOT-4f2fe6a        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
                 Powered by MCP                  
             http://modcoderpack.com             
     by: Searge, ProfMobius, R4wk, ZeuX          
     Fesh0r, IngisKahn, bspkrs, LexManos         
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:sourceApiJava
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavaC:\Users\Administrator\Documents\GitHub\ClassCraft\ForgeWorkspace\build\sources\main\java\com\hassam\classcraft\Main.java:17: error: cannot find symbol
	public static CommonProxy proxy;
	              ^
  symbol:   class CommonProxy
  location: class Main
C:\Users\Administrator\Documents\GitHub\ClassCraft\ForgeWorkspace\build\sources\main\java\com\hassam\classcraft\Main.java:11: error: cannot find symbol
@Mod(modid = Reference.MODID, name = Reference.NAME, version = Reference.VERSION)
             ^
  symbol: variable Reference
C:\Users\Administrator\Documents\GitHub\ClassCraft\ForgeWorkspace\build\sources\main\java\com\hassam\classcraft\Main.java:11: error: cannot find symbol
@Mod(modid = Reference.MODID, name = Reference.NAME, version = Reference.VERSION)
                                     ^
  symbol: variable Reference
C:\Users\Administrator\Documents\GitHub\ClassCraft\ForgeWorkspace\build\sources\main\java\com\hassam\classcraft\Main.java:11: error: cannot find symbol
@Mod(modid = Reference.MODID, name = Reference.NAME, version = Reference.VERSION)
                                                               ^
  symbol: variable Reference
C:\Users\Administrator\Documents\GitHub\ClassCraft\ForgeWorkspace\build\sources\main\java\com\hassam\classcraft\Main.java:16: error: cannot find symbol
	@SidedProxy(clientSide = Reference.CLIENT, serverSide = Reference.COMMON)
	                         ^
  symbol:   variable Reference
  location: class Main
C:\Users\Administrator\Documents\GitHub\ClassCraft\ForgeWorkspace\build\sources\main\java\com\hassam\classcraft\Main.java:16: error: cannot find symbol
	@SidedProxy(clientSide = Reference.CLIENT, serverSide = Reference.COMMON)
	                                                        ^
  symbol:   variable Reference
  location: class Main
6 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 11.496 secs
